# pfc-bank

./: .gitignore  README.md  extract.py  persona.sh  pyproject.toml  rfr.sh  run-demo.sh  run.sh
.github/workflows/: daily.yml  demo_deploy_dashboard.yml  deploy_dashboard.yml  deploy_dbt_docs.yml  extract.yml  nfcu_reauth.yml
aws-config/: nfcu-pipe-gha-trust-policy.json
config/aws/: nfcu-pipe-s3-put.json
config/dashboard/: .gitignore
config/duckdb/: .duckdbrc
dashboard/: .env.example  .gitignore  package-lock.json  package.json
dashboard/pages/: +layout.svelte  index.md
dashboard/queries/: chart_coe_expenses_detail.sql  chart_daily_overunder.sql  chart_expenses_by_cat.sql  chart_monthly_savings.sql  persona_info.sql  rows_all_expenses.sql  rows_big_ticket.sql  rows_cc_interest_payments.sql  rows_coe_expenses_detail.sql  rows_income.sql  rows_monthly_savings.sql  rows_mortgage_payment.sql  total_assets_minus_mortgage.sql  total_cc_debt.sql  total_checking.sql  total_mortgage.sql
dashboard/scripts/: offload-wasm.sh
dbt_code/: dbt_project.yml  dim_accounts.csv  packages.yml  profiles.yml  sources.yml
dbt_code/analyses/: mom_change_attempt.sql
dbt_code/macros/: data_path.sql
dbt_code/models/: sources.yml
dbt_code/seeds/: seed_initial_balance.csv  (+3 more)
duckdb-config/: .duckdbrc
planning/: deploy_dashboard_to_web.md  duck_db_quickstart.md  iam-policy.json  iam-trust-policy.json  ingestion_setup.md  plan.md  reauth_approach.md
synthetic/: .gitignore  README.md  generate.py  merchants.yaml  persona.yaml  persona_meta.py  validate.py  verify.py
(+95 files in other folders)
