[project]
name = "nfcu-pipe"
version = "0.1.0"
description = "A headless data ingestion pipeline for Navy Federal financial transactions via Plaid."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "plaid-python>=24.0.0",
    "python-dotenv>=1.0.1",
]

# This line tells uv NOT to try and build/install the root folder as a package
[tool.uv]
package = false
