[project]
name = "nfcu-pipe"
version = "0.1.0"
description = "Daily raw extract of NFCU account data via SimpleFIN into S3."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "dbt-core>=1.11.12",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "requests",
]

# This line tells uv NOT to try and build/install the root folder as a package
[tool.uv]
package = false
